# stm32-uart

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
.zed/: settings.json
src/: main.rs
