[package]
name = "stm32-uart"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l452"] }

[features]
default = [
    "defmt-default",
]

defmt-default = []

[profile.release]
debug = 2
